# alfredo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LANGCHAIN_INTEGRATION.md  README.md  TOOLS_README.md  mkdocs.yml  project.json  pyproject.toml  test_minimal.py
docs/: agent-architecture.md  alfredo-tools.md  index.md  mcp-integration.md  modules.md  prebuilt-agents.md  tools.md
examples/: README.md  agentic_example.py  basic_usage.py  hello_world.py  langchain_integration.py  mcp_http_remote_biocontext.py  openai_native_example.py  web_fetch_example.py  web_fetch_simple.py
src/alfredo/: __init__.py  agent.py
src/alfredo/agentic/: README.md  __init__.py  agent.py  context_manager.py  graph.py  nodes.py  prompt_templates.py  prompts.py  reasoning_parser.py  state.py
src/alfredo/integrations/: __init__.py  langchain.py  mcp.py  mcp_http_wrapper.py  openai_native.py
src/alfredo/prebuilt/: __init__.py  explore.py  reflexion.py
src/alfredo/prompts/: __init__.py  builder.py
src/alfredo/tools/: __init__.py  alfredo_tool.py  base.py  code_extraction.py  registry.py  specs.py
src/alfredo/tools/handlers/: __init__.py  code_analysis.py  command.py  discovery.py  file_ops.py  todo.py  vision.py  web.py  workflow.py
tests/: test_agent.py  test_agent_prompts.py  test_agentic_basic.py  test_agentic_graph.py  test_alfredo_tool.py  test_code_analysis.py  test_foo.py  test_langchain_integration.py  test_mcp_http_wrapper.py  test_openai_integration.py  test_prebuilt_explore.py  test_prompt_customization.py  test_reasoning_parser.py  test_vision_tool.py  test_web_tools.py
