[project]
name = "alfredo"
version = "0.0.1"
description = "Python harness for  AI agents"
authors = [{ name = "Francesco Carli", email = "francesco.carli94@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tree-sitter>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
]

[project.urls]
Homepage = "https://fcarli.github.io/alfredo/"
Repository = "https://github.com/fcarli/alfredo"
Documentation = "https://fcarli.github.io/alfredo/"

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.78",
]
agentic = [
    "langchain-core>=0.3.78",
    "langgraph>=0.2.59",
    "langchain>=0.3.17",
    "langchain-openai>=0.2.14",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "vulture>=2.14",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "types-requests>=2.32.4.20250913",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfredo"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "alfredo.integrations.langchain"
disallow_any_unimported = false
warn_return_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alfredo.integrations.mcp"
disallow_any_unimported = false
warn_return_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alfredo.tools.handlers.web"
disallow_any_unimported = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alfredo.tools.handlers.code_analysis"
disallow_any_unimported = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
